# SQLinikumServer

./: CMakeLists.txt  LICENSE  README.md
include/: ClientHandler.h  DatabaseManager.h  Server.h  Utils.h
src/: ClientHandler.cpp  DatabaseManager.cpp  Server.cpp  Utils.cpp
